syntax = "proto3";

import "streamlit/proto/LabelVisibilityMessage.proto";

message TextInput {
  enum Type {
    // A normal text input.
    DEFAULT = 0;

    // A password text input. Typed values are obscured by default.
    PASSWORD = 1;
  }

  string id = 1;
  string label = 2;
  string default = 3;
  Type type = 4;
  uint32 max_chars = 5;
  string help = 6;
  string form_id = 7;
  string value = 8;
  bool set_value = 9;
  string autocomplete = 10;
  string placeholder = 11;
  bool disabled = 12;
  LabelVisibilityMessage label_visibility = 13;
}
